# temporal-demo-finance

./: .gitignore  .tool-versions  README.md  docker-compose.yml  justfile  pyproject.toml  scenarios.json
dotnet/: Class1.cs
golang/: go.mod  go.sum
golang/pkg/temporal/: client.go  config.go  config_test.go
graphql/: api.graphql  app.graphql  commands.graphql  diag.graphql  queries.graphql  workflows.graphql
java/: build.gradle  settings.gradle
java/bff/: build.gradle
java/domain/: build.gradle
java/gradle/wrapper/: gradle-wrapper.properties
observability/prometheus/: prometheus.yml
python/: pyproject.toml
typescript/: .env.defaults  .env.schema  .gitignore  README.md  codegen.ts  package-lock.json  package.json  tsconfig.json
typescript/scripts/: build-workflow-bundle.ts
typescript/src/bff/: api.ts  index.ts  resolvers.ts
ui/: .gitignore
ui/server/: .tool-versions  README.md  codegen.ts  generated.ts  package-lock.json  package.json  resolvers.ts  sse-server.ts  tsconfig.json
ui/traditional/: main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
ui/traditional/app/: clients.py  config.py  index.py  messages.py  models.py  views.py
ui/traditional/static/src/: app.css
ui/traditional/templates/: _footer.html  _header.html  _nav.html  _options.html  _payment_form.html  base.html  debug.html  index.html  payment.html
ui/web/: .tool-versions  codegen.ts  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest-setup.ts  vitest.config.ts
ui/web/src/: app.css
(+105 files in other folders)
